// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ranking subcommand Limit defaults to 25 if invalid characters provided 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "Server Ranking",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
6 - user105 [995 points] 
7 - user106 [994 points] 
8 - user107 [993 points] 
9 - user108 [992 points] 
10 - user109 [991 points] 
11 - user110 [990 points] 
12 - user111 [989 points] 
13 - user112 [988 points] 
14 - user113 [987 points] 
15 - user114 [986 points] 
16 - user115 [985 points] 
17 - user116 [984 points] 
18 - user117 [983 points] 
19 - user118 [982 points] 
20 - user119 [981 points] 
21 - user120 [980 points] 
22 - user121 [979 points] 
23 - user122 [978 points] 
24 - user123 [977 points] 
25 - user124 [976 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`ranking subcommand Limit defaults to 25 if limit not provided 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "Server Ranking",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
6 - user105 [995 points] 
7 - user106 [994 points] 
8 - user107 [993 points] 
9 - user108 [992 points] 
10 - user109 [991 points] 
11 - user110 [990 points] 
12 - user111 [989 points] 
13 - user112 [988 points] 
14 - user113 [987 points] 
15 - user114 [986 points] 
16 - user115 [985 points] 
17 - user116 [984 points] 
18 - user117 [983 points] 
19 - user118 [982 points] 
20 - user119 [981 points] 
21 - user120 [980 points] 
22 - user121 [979 points] 
23 - user122 [978 points] 
24 - user123 [977 points] 
25 - user124 [976 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`ranking subcommand Limit defaults to 25 if limit provided is higher than 25 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "Server Ranking",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
6 - user105 [995 points] 
7 - user106 [994 points] 
8 - user107 [993 points] 
9 - user108 [992 points] 
10 - user109 [991 points] 
11 - user110 [990 points] 
12 - user111 [989 points] 
13 - user112 [988 points] 
14 - user113 [987 points] 
15 - user114 [986 points] 
16 - user115 [985 points] 
17 - user116 [984 points] 
18 - user117 [983 points] 
19 - user118 [982 points] 
20 - user119 [981 points] 
21 - user120 [980 points] 
22 - user121 [979 points] 
23 - user122 [978 points] 
24 - user123 [977 points] 
25 - user124 [976 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`ranking subcommand Limit defaults to 25 if limit provided lower than 1 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "Server Ranking",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
6 - user105 [995 points] 
7 - user106 [994 points] 
8 - user107 [993 points] 
9 - user108 [992 points] 
10 - user109 [991 points] 
11 - user110 [990 points] 
12 - user111 [989 points] 
13 - user112 [988 points] 
14 - user113 [987 points] 
15 - user114 [986 points] 
16 - user115 [985 points] 
17 - user116 [984 points] 
18 - user117 [983 points] 
19 - user118 [982 points] 
20 - user119 [981 points] 
21 - user120 [980 points] 
22 - user121 [979 points] 
23 - user122 [978 points] 
24 - user123 [977 points] 
25 - user124 [976 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`ranking subcommand Offset cannot exceed max users length 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "Server Ranking",
          "value": "26 - user125 [975 points] 
27 - user126 [974 points] 
28 - user127 [973 points] 
29 - user128 [972 points] 
30 - user129 [971 points] 
31 - user130 [970 points] 
32 - user131 [969 points] 
33 - user132 [968 points] 
34 - user133 [967 points] 
35 - user134 [966 points] 
36 - user135 [965 points] 
37 - user136 [964 points] 
38 - user137 [963 points] 
39 - user138 [962 points] 
40 - user139 [961 points] 
41 - user140 [960 points] 
42 - user141 [959 points] 
43 - user142 [958 points] 
44 - user143 [957 points] 
45 - user144 [956 points] 
46 - user145 [955 points] 
47 - user146 [954 points] 
48 - user147 [953 points] 
49 - user148 [952 points] 
50 - user149 [951 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`ranking subcommand Offset defaults to 0 if invalid characters provided 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "Server Ranking",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
6 - user105 [995 points] 
7 - user106 [994 points] 
8 - user107 [993 points] 
9 - user108 [992 points] 
10 - user109 [991 points] 
11 - user110 [990 points] 
12 - user111 [989 points] 
13 - user112 [988 points] 
14 - user113 [987 points] 
15 - user114 [986 points] 
16 - user115 [985 points] 
17 - user116 [984 points] 
18 - user117 [983 points] 
19 - user118 [982 points] 
20 - user119 [981 points] 
21 - user120 [980 points] 
22 - user121 [979 points] 
23 - user122 [978 points] 
24 - user123 [977 points] 
25 - user124 [976 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`ranking subcommand Offset defaults to 0 if negative value provided 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "Server Ranking",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
6 - user105 [995 points] 
7 - user106 [994 points] 
8 - user107 [993 points] 
9 - user108 [992 points] 
10 - user109 [991 points] 
11 - user110 [990 points] 
12 - user111 [989 points] 
13 - user112 [988 points] 
14 - user113 [987 points] 
15 - user114 [986 points] 
16 - user115 [985 points] 
17 - user116 [984 points] 
18 - user117 [983 points] 
19 - user118 [982 points] 
20 - user119 [981 points] 
21 - user120 [980 points] 
22 - user121 [979 points] 
23 - user122 [978 points] 
24 - user123 [977 points] 
25 - user124 [976 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`ranking subcommand Offset defaults to 0 if not provided 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "Server Ranking",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
6 - user105 [995 points] 
7 - user106 [994 points] 
8 - user107 [993 points] 
9 - user108 [992 points] 
10 - user109 [991 points] 
11 - user110 [990 points] 
12 - user111 [989 points] 
13 - user112 [988 points] 
14 - user113 [987 points] 
15 - user114 [986 points] 
16 - user115 [985 points] 
17 - user116 [984 points] 
18 - user117 [983 points] 
19 - user118 [982 points] 
20 - user119 [981 points] 
21 - user120 [980 points] 
22 - user121 [979 points] 
23 - user122 [978 points] 
24 - user123 [977 points] 
25 - user124 [976 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`ranking subcommand Offset show the last users depending on limit if offset is too high 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "Server Ranking",
          "value": "46 - user145 [955 points] 
47 - user146 [954 points] 
48 - user147 [953 points] 
49 - user148 [952 points] 
50 - user149 [951 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`ranking subcommand Return the correct limit, moving offset backward if necessary 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "Server Ranking",
          "value": "51 - user150 [950 points] 
52 - user151 [949 points] 
53 - user152 [948 points] 
54 - user153 [947 points] 
55 - user154 [946 points] 
56 - user155 [945 points] 
57 - user156 [944 points] 
58 - user157 [943 points] 
59 - user158 [942 points] 
60 - user159 [941 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`ranking subcommand Returned users length matches limit 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "Server Ranking",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
6 - user105 [995 points] 
7 - user106 [994 points] 
8 - user107 [993 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`ranking subcommand Returns users starting from offset 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "Server Ranking",
          "value": "6 - user105 [995 points] 
7 - user106 [994 points] 
8 - user107 [993 points] 
9 - user108 [992 points] 
10 - user109 [991 points] 
11 - user110 [990 points] 
12 - user111 [989 points] 
13 - user112 [988 points] 
14 - user113 [987 points] 
15 - user114 [986 points] 
16 - user115 [985 points] 
17 - user116 [984 points] 
18 - user117 [983 points] 
19 - user118 [982 points] 
20 - user119 [981 points] 
21 - user120 [980 points] 
22 - user121 [979 points] 
23 - user122 [978 points] 
24 - user123 [977 points] 
25 - user124 [976 points] 
26 - user125 [975 points] 
27 - user126 [974 points] 
28 - user127 [973 points] 
29 - user128 [972 points] 
30 - user129 [971 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`user subcommand Format the points word properly for 1 point 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "User Rank",
          "value": "Someone has 1 point!",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`user subcommand Formats the points word properly for 0 or more than 1 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "User Rank",
          "value": "Dog has 20 points!",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`user subcommand Formats the points word properly for 0 or more than 1 2`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "User Rank",
          "value": "Dog has 0 points!",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`user subcommand Return correct rank if user rank recieved 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "User Rank",
          "value": "5 - Cat has 20 points!",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`user subcommand Return correct reply when user has no points 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "User Rank",
          "value": "NotOdin has 0 points!",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;
